<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jesusgandhiandbebe.CreateLobbyActivity">
    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <EditText
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Event Name"/>
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/event_day"
                android:clickable="true"
                android:text="Click to Pick Date"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/event_time"
                android:clickable="true"
                android:text="Click to Pick Time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <TextView
            android:text="Choose Friends You Want at Your Event"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/friend_list"
            android:layout_height="200dp"
            android:layout_width="match_parent">

        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/create_event"
            android:layout_weight="1"
            android:text="Create Lobby"
            android:onClick="createLobby"
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="0dp" />

    </LinearLayout>

</ScrollView>
